fix(saju): 사주 스냅샷을 한국어 명리 용어와 확정 기둥 기준 오행으로 저장 (saju-ko-v4)
lunar-java가 돌려주는 한자 간지·오행과 중국어 간체 십성이 그대로 저장돼 화면에 乙丑·七杀처럼 보였다. 계산 규칙은 한자 값으로 판정하고, 스냅샷을 만들 때 SajuKoreanTerms로 한국어 용어로 바꾼다. 해석 입력 변환기도 같은 표를 쓰며 이전 한자 스냅샷을 계속 읽는다. 오행 분포는 후보끼리 값이 같은 오행만 남겨 일부가 빠지던 것을, 확정된 기둥만으로 다섯 오행을 모두 세도록 바꾼다. 계산 버전을 saju-ko-v4로 올리고 v4 골든 fixture를 추가한다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>